# GEneral-Matrix-Matrix-Multiply

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
bench/: bench_gemm.cpp  bench_gemm_avx2.cpp  bench_gemm_ref.cpp
include/: backend_avx2.hpp  backend_neon.hpp  backend_ref.hpp  macro.hpp  matrix_multiply.hpp
